--- a/scss/blocks/_agency.scss
+++ b/scss/blocks/_agency.scss
@@ -110,6 +110,8 @@
       margin-top: -545px;
     }
     @media (max-width: 840px) {
+      transform: translateY(-149px);
+
       background-image: url("./../images/background/agency/agency-bg-tablet-2.png");
 
       background-position: center;
@@ -117,19 +119,9 @@
       background-size: 100% 100%;
 
       margin-top: 0;
-
-      -webkit-mask-image: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 1) 80%,
-        rgba(0, 0, 0, 0) 100%
-      );
-      mask-image: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 1) 80%,
-        rgba(0, 0, 0, 0) 100%
-      );
     }
     @media (max-width: 767px) {
+      transform: translateY(0);
       background-image: url("./../images/background/agency/agency-bg-mobile-2.png");
 
       -webkit-mask-image: linear-gradient(
@@ -149,8 +141,6 @@
     display: flex;
     justify-content: end;
     @media (max-width: 840px) {
-      transform: translateY(-149px);
-
       display: block;
 
       margin-left: $margin-left-840;
