--- a/scss/blocks/_processes.scss
+++ b/scss/blocks/_processes.scss
@@ -7,7 +7,7 @@
 
   .processes__bg-img {
     position: absolute;
-    z-index: -1;
+    z-index: -2;
     top: 0;
     left: 0;
     width: 100%;
